<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Chọn giới tính"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all_male"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_female"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_marginTop_button"
        android:gravity="center"
        android:paddingHorizontal="@dimen/all_paddingHorizontal_button">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/all_height_button">

            <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@mipmap/bg_btn_result"
                android:text="@string/done"
                android:textColor="@color/textColorTitle"
                android:textSize="@dimen/all_textSize_title_spinner"/>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

</LinearLayout>