<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main"
    android:orientation="vertical"
    tools:context="tuvi2018.tuvitrondoi.vmb.CheckHouseDirectionActivity">

    <include layout="@layout/layout_action_bar"/>

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/all_marginVertical_title"
        android:layout_marginHorizontal="@dimen/all_marginHorizontal_title"
        android:gravity="center"
        android:text="@string/check_beautifulCard_title"
        android:textColor="@color/textColorTitle"
        android:textSize="@dimen/all_textSize_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_spacing_spinner"/>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/spinner_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_height_spinner"
            android:background="@mipmap/bg_box">

            <TextView
                android:id="@+id/lbl_spinner_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/all_marginLeft_title_spinner"
                android:text="@string/all_gender"
                android:textColor="@color/textColor"
                android:textSize="@dimen/all_textSize_title_spinner"/>

            <ImageView
                android:layout_width="@dimen/all_size_arrow_spinner"
                android:layout_height="@dimen/all_size_arrow_spinner"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/all_marginRight_arrow_spinner"
                android:src="@mipmap/ic_arrow_down"/>

        </FrameLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/spinner_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_height_spinner"
            android:background="@mipmap/bg_box">

            <TextView
                android:id="@+id/lbl_spinner_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/all_marginLeft_title_spinner"
                android:text="@string/check_beautifulCard_birthhour"
                android:textColor="@color/textColor"
                android:textSize="@dimen/all_textSize_title_spinner"/>

            <ImageView
                android:layout_width="@dimen/all_size_arrow_spinner"
                android:layout_height="@dimen/all_size_arrow_spinner"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/all_marginRight_arrow_spinner"
                android:src="@mipmap/ic_arrow_down"/>

        </FrameLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/spinner_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_height_spinner"
            android:background="@mipmap/bg_box">

            <TextView
                android:id="@+id/lbl_spinner_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/all_marginLeft_title_spinner"
                android:text="@string/all_birthday"
                android:textColor="@color/textColor"
                android:textSize="@dimen/all_textSize_title_spinner"/>

            <ImageView
                android:layout_width="@dimen/all_size_arrow_spinner"
                android:layout_height="@dimen/all_size_arrow_spinner"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="@dimen/all_marginRight_arrow_spinner"
                android:src="@mipmap/ic_arrow_down"/>

        </FrameLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_height_spinner"
            android:background="@mipmap/bg_box">

            <EditText
                android:id="@+id/txt_spinner_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/all_marginLeft_title_spinner"
                android:layout_marginRight="@dimen/all_marginRight_arrow_spinner"
                android:background="@color/transparent"
                android:hint="@string/check_beautifulCard_telephoneNumber"
                android:textColorHint="@color/textColor"
                android:textSize="@dimen/all_textSize_title_spinner"
                android:inputType="numberDecimal"
                android:singleLine="true"/>

        </FrameLayout>

    <include layout="@layout/layout_button_result"/>

    <include layout="@layout/layout_adview"/>

</LinearLayout>
