<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main"
    tools:context="tuvi2018.tuvitrondoi.vmb.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_action_bar"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_height_layout_item"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/item_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/home_marginLeftRight_layout_item"
                    android:layout_weight="1"
                    android:background="@drawable/selector_xem_ngay_tot"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/check_beautifulDay"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_xem_sim_so_dep"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/check_beautifulCard"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/home_marginLeftRight_layout_item"
                    android:layout_weight="1"
                    android:background="@drawable/selector_van_menh_theo_ngay_sinh"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/check_destiny"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_height_layout_item"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/item_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/home_marginLeftRight_layout_item"
                    android:layout_weight="1"
                    android:background="@drawable/selector_boi_ai_cap"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/boi_Egypt"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_chon_tuoi_vo_chong"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/choose_coupleAge"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/home_marginLeftRight_layout_item"
                    android:layout_weight="1"
                    android:background="@drawable/selector_boi_tinh_duyen"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/boi_love"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_height_layout_item"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/item_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/home_marginLeftRight_layout_item"
                    android:layout_weight="1"
                    android:background="@drawable/selector_chon_nam_xay_nha"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/choose_buildingYear"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_xem_huong_nha"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/check_houseDirection"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/home_marginLeftRight_layout_item"
                    android:layout_weight="1"
                    android:background="@drawable/selector_nam_sinh_cha_me"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/boi_parentBirthDay"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_height_layout_item"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

                <LinearLayout
                    android:id="@+id/item_10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_sao_chieu_menh"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/check_starDestiny"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_trang_phuc_may_man"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_item_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginRight="@dimen/home_marginLeftRight_title_item"
                        android:layout_marginTop="@dimen/home_marginTop_title_item"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/check_luckyClothes"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/home_textSize_title_item"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_adview"/>

</FrameLayout>
